src/spectriad_runtime/pgen/PgenParser.py
# Generated from PgenParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PgenParser ( Parser ):

    grammarFileName = "PgenParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'<'", "'>'", "<INVALID>", "':'", "'|'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'?'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'''", "'\"'", 
                     "<INVALID>", "')'", "'}'", "']'" ]

    symbolicNames = [ "<INVALID>", "LPAR", "LBRACE", "LBRACK", "LANGLEBRAC", 
                      "RANGLEBRAC", "SEMI", "COLON", "PIPE", "ID", "FLOAT", 
                      "STRING", "TODO", "WHITESPACE", "COMMENT", "CODE_LPAR", 
                      "CODE_LBRACE", "CODE_LBRACK", "CODE_SINGLE_QUOTE_OPEN", 
                      "CODE_DOUBLE_QUOTE_OPEN", "CODE_SEMI", "RPAR", "RBRACE", 
                      "RBRACK", "CODE_INIT_NO_PAIRS", "CODE_NO_PAIRS", "CODE_SINGLE_QUOTE_STRING", 
                      "CODE_DOUBLE_QUOTE_STRING" ]

    RULE_start = 0
    RULE_nt_defn_list = 1
    RULE_nt_defn = 2
    RULE_expansion_list = 3
    RULE_expansion = 4
    RULE_term_list = 5
    RULE_term = 6
    RULE_terminal = 7
    RULE_expression = 8
    RULE_variable = 9
    RULE_nonterminal_variable = 10
    RULE_stateful_block = 11
    RULE_nonterminal_term = 12
    RULE_constraints = 13
    RULE_weight = 14
    RULE_function_list = 15
    RULE_init_or_update = 16
    RULE_init = 17
    RULE_update = 18
    RULE_code = 19

    ruleNames =  [ "start", "nt_defn_list", "nt_defn", "expansion_list", 
                   "expansion", "term_list", "term", "terminal", "expression", 
                   "variable", "nonterminal_variable", "stateful_block", 
                   "nonterminal_term", "constraints", "weight", "function_list", 
                   "init_or_update", "init", "update", "code" ]

    EOF = Token.EOF
    LPAR=1
    LBRACE=2
    LBRACK=3
    LANGLEBRAC=4
    RANGLEBRAC=5
    SEMI=6
    COLON=7
    PIPE=8
    ID=9
    FLOAT=10
    STRING=11
    TODO=12
    WHITESPACE=13
    COMMENT=14
    CODE_LPAR=15
    CODE_LBRACE=16
    CODE_LBRACK=17
    CODE_SINGLE_QUOTE_OPEN=18
    CODE_DOUBLE_QUOTE_OPEN=19
    CODE_SEMI=20
    RPAR=21
    RBRACE=22
    RBRACK=23
    CODE_INIT_NO_PAIRS=24
    CODE_NO_PAIRS=25
    CODE_SINGLE_QUOTE_STRING=26
    CODE_DOUBLE_QUOTE_STRING=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nt_defn_list(self):
            return self.getTypedRuleContext(PgenParser.Nt_defn_listContext,0)


        def EOF(self):
            return self.getToken(PgenParser.EOF, 0)

        def getRuleIndex(self):
            return PgenParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = PgenParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.nt_defn_list()
            self.state = 41
            self.match(PgenParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Nt_defn_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nt_defn(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PgenParser.Nt_defnContext)
            else:
                return self.getTypedRuleContext(PgenParser.Nt_defnContext,i)


        def getRuleIndex(self):
            return PgenParser.RULE_nt_defn_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNt_defn_list" ):
                listener.enterNt_defn_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNt_defn_list" ):
                listener.exitNt_defn_list(self)




    def nt_defn_list(self):

        localctx = PgenParser.Nt_defn_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_nt_defn_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 43
                self.nt_defn()
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Nt_defnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nonterminal_variable(self):
            return self.getTypedRuleContext(PgenParser.Nonterminal_variableContext,0)


        def COLON(self):
            return self.getToken(PgenParser.COLON, 0)

        def expansion_list(self):
            return self.getTypedRuleContext(PgenParser.Expansion_listContext,0)


        def SEMI(self):
            return self.getToken(PgenParser.SEMI, 0)

        def getRuleIndex(self):
            return PgenParser.RULE_nt_defn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNt_defn" ):
                listener.enterNt_defn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNt_defn" ):
                listener.exitNt_defn(self)




    def nt_defn(self):

        localctx = PgenParser.Nt_defnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_nt_defn)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.nonterminal_variable()
            self.state = 50
            self.match(PgenParser.COLON)
            self.state = 51
            self.expansion_list()
            self.state = 52
            self.match(PgenParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expansion_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expansion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PgenParser.ExpansionContext)
            else:
                return self.getTypedRuleContext(PgenParser.ExpansionContext,i)


        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(PgenParser.PIPE)
            else:
                return self.getToken(PgenParser.PIPE, i)

        def getRuleIndex(self):
            return PgenParser.RULE_expansion_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpansion_list" ):
                listener.enterExpansion_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpansion_list" ):
                listener.exitExpansion_list(self)




    def expansion_list(self):

        localctx = PgenParser.Expansion_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expansion_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.expansion()
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 55
                self.match(PgenParser.PIPE)
                self.state = 56
                self.expansion()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpansionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term_list(self):
            return self.getTypedRuleContext(PgenParser.Term_listContext,0)


        def constraints(self):
            return self.getTypedRuleContext(PgenParser.ConstraintsContext,0)


        def weight(self):
            return self.getTypedRuleContext(PgenParser.WeightContext,0)


        def getRuleIndex(self):
            return PgenParser.RULE_expansion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpansion" ):
                listener.enterExpansion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpansion" ):
                listener.exitExpansion(self)




    def expansion(self):

        localctx = PgenParser.ExpansionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expansion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 62
                self.constraints()


            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 65
                self.weight()


            self.state = 68
            self.term_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Term_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PgenParser.TermContext)
            else:
                return self.getTypedRuleContext(PgenParser.TermContext,i)


        def stateful_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PgenParser.Stateful_blockContext)
            else:
                return self.getTypedRuleContext(PgenParser.Stateful_blockContext,i)


        def getRuleIndex(self):
            return PgenParser.RULE_term_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm_list" ):
                listener.enterTerm_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm_list" ):
                listener.exitTerm_list(self)




    def term_list(self):

        localctx = PgenParser.Term_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_term_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 70
                self.stateful_block()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.term()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2572) != 0):
                self.state = 79
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3, 9, 11]:
                    self.state = 77
                    self.term()
                    pass
                elif token in [2]:
                    self.state = 78
                    self.stateful_block()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def terminal(self):
            return self.getTypedRuleContext(PgenParser.TerminalContext,0)


        def expression(self):
            return self.getTypedRuleContext(PgenParser.ExpressionContext,0)


        def nonterminal_term(self):
            return self.getTypedRuleContext(PgenParser.Nonterminal_termContext,0)


        def getRuleIndex(self):
            return PgenParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = PgenParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_term)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.terminal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.expression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.nonterminal_term()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(PgenParser.STRING, 0)

        def getRuleIndex(self):
            return PgenParser.RULE_terminal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerminal" ):
                listener.enterTerminal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerminal" ):
                listener.exitTerminal(self)




    def terminal(self):

        localctx = PgenParser.TerminalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_terminal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(PgenParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(PgenParser.LBRACK, 0)

        def code(self):
            return self.getTypedRuleContext(PgenParser.CodeContext,0)


        def RBRACK(self):
            return self.getToken(PgenParser.RBRACK, 0)

        def variable(self):
            return self.getTypedRuleContext(PgenParser.VariableContext,0)


        def getRuleIndex(self):
            return PgenParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = PgenParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 91
                self.variable()


            self.state = 94
            self.match(PgenParser.LBRACK)
            self.state = 95
            self.code()
            self.state = 96
            self.match(PgenParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PgenParser.ID, 0)

        def getRuleIndex(self):
            return PgenParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)




    def variable(self):

        localctx = PgenParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(PgenParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Nonterminal_variableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PgenParser.ID, 0)

        def getRuleIndex(self):
            return PgenParser.RULE_nonterminal_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNonterminal_variable" ):
                listener.enterNonterminal_variable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNonterminal_variable" ):
                listener.exitNonterminal_variable(self)




    def nonterminal_variable(self):

        localctx = PgenParser.Nonterminal_variableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_nonterminal_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(PgenParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stateful_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(PgenParser.LBRACE, 0)

        def function_list(self):
            return self.getTypedRuleContext(PgenParser.Function_listContext,0)


        def RBRACE(self):
            return self.getToken(PgenParser.RBRACE, 0)

        def getRuleIndex(self):
            return PgenParser.RULE_stateful_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateful_block" ):
                listener.enterStateful_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStateful_block" ):
                listener.exitStateful_block(self)




    def stateful_block(self):

        localctx = PgenParser.Stateful_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stateful_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(PgenParser.LBRACE)
            self.state = 103
            self.function_list()
            self.state = 104
            self.match(PgenParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Nonterminal_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nonterminal_variable(self):
            return self.getTypedRuleContext(PgenParser.Nonterminal_variableContext,0)


        def constraints(self):
            return self.getTypedRuleContext(PgenParser.ConstraintsContext,0)


        def getRuleIndex(self):
            return PgenParser.RULE_nonterminal_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNonterminal_term" ):
                listener.enterNonterminal_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNonterminal_term" ):
                listener.exitNonterminal_term(self)




    def nonterminal_term(self):

        localctx = PgenParser.Nonterminal_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_nonterminal_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.nonterminal_variable()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 107
                self.constraints()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstraintsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAR(self):
            return self.getToken(PgenParser.LPAR, 0)

        def code(self):
            return self.getTypedRuleContext(PgenParser.CodeContext,0)


        def RPAR(self):
            return self.getToken(PgenParser.RPAR, 0)

        def getRuleIndex(self):
            return PgenParser.RULE_constraints

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstraints" ):
                listener.enterConstraints(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstraints" ):
                listener.exitConstraints(self)




    def constraints(self):

        localctx = PgenParser.ConstraintsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_constraints)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(PgenParser.LPAR)
            self.state = 111
            self.code()
            self.state = 112
            self.match(PgenParser.RPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WeightContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LANGLEBRAC(self):
            return self.getToken(PgenParser.LANGLEBRAC, 0)

        def FLOAT(self):
            return self.getToken(PgenParser.FLOAT, 0)

        def RANGLEBRAC(self):
            return self.getToken(PgenParser.RANGLEBRAC, 0)

        def getRuleIndex(self):
            return PgenParser.RULE_weight

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWeight" ):
                listener.enterWeight(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWeight" ):
                listener.exitWeight(self)




    def weight(self):

        localctx = PgenParser.WeightContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_weight)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(PgenParser.LANGLEBRAC)
            self.state = 115
            self.match(PgenParser.FLOAT)
            self.state = 116
            self.match(PgenParser.RANGLEBRAC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init_or_update(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PgenParser.Init_or_updateContext)
            else:
                return self.getTypedRuleContext(PgenParser.Init_or_updateContext,i)


        def CODE_SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(PgenParser.CODE_SEMI)
            else:
                return self.getToken(PgenParser.CODE_SEMI, i)

        def getRuleIndex(self):
            return PgenParser.RULE_function_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_list" ):
                listener.enterFunction_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_list" ):
                listener.exitFunction_list(self)




    def function_list(self):

        localctx = PgenParser.Function_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_function_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.init_or_update()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 119
                self.match(PgenParser.CODE_SEMI)
                self.state = 120
                self.init_or_update()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_or_updateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init(self):
            return self.getTypedRuleContext(PgenParser.InitContext,0)


        def update(self):
            return self.getTypedRuleContext(PgenParser.UpdateContext,0)


        def getRuleIndex(self):
            return PgenParser.RULE_init_or_update

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit_or_update" ):
                listener.enterInit_or_update(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit_or_update" ):
                listener.exitInit_or_update(self)




    def init_or_update(self):

        localctx = PgenParser.Init_or_updateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_init_or_update)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.init()
                pass
            elif token in [15, 16, 17, 18, 19, 25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.update()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CODE_INIT_NO_PAIRS(self):
            return self.getToken(PgenParser.CODE_INIT_NO_PAIRS, 0)

        def code(self):
            return self.getTypedRuleContext(PgenParser.CodeContext,0)


        def getRuleIndex(self):
            return PgenParser.RULE_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit" ):
                listener.enterInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit" ):
                listener.exitInit(self)




    def init(self):

        localctx = PgenParser.InitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_init)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(PgenParser.CODE_INIT_NO_PAIRS)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 34570240) != 0):
                self.state = 131
                self.code()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def code(self):
            return self.getTypedRuleContext(PgenParser.CodeContext,0)


        def getRuleIndex(self):
            return PgenParser.RULE_update

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdate" ):
                listener.enterUpdate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdate" ):
                listener.exitUpdate(self)




    def update(self):

        localctx = PgenParser.UpdateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_update)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.code()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CODE_LPAR(self):
            return self.getToken(PgenParser.CODE_LPAR, 0)

        def RPAR(self):
            return self.getToken(PgenParser.RPAR, 0)

        def code(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PgenParser.CodeContext)
            else:
                return self.getTypedRuleContext(PgenParser.CodeContext,i)


        def CODE_LBRACE(self):
            return self.getToken(PgenParser.CODE_LBRACE, 0)

        def RBRACE(self):
            return self.getToken(PgenParser.RBRACE, 0)

        def CODE_LBRACK(self):
            return self.getToken(PgenParser.CODE_LBRACK, 0)

        def RBRACK(self):
            return self.getToken(PgenParser.RBRACK, 0)

        def CODE_SINGLE_QUOTE_OPEN(self):
            return self.getToken(PgenParser.CODE_SINGLE_QUOTE_OPEN, 0)

        def CODE_SINGLE_QUOTE_STRING(self):
            return self.getToken(PgenParser.CODE_SINGLE_QUOTE_STRING, 0)

        def CODE_DOUBLE_QUOTE_OPEN(self):
            return self.getToken(PgenParser.CODE_DOUBLE_QUOTE_OPEN, 0)

        def CODE_DOUBLE_QUOTE_STRING(self):
            return self.getToken(PgenParser.CODE_DOUBLE_QUOTE_STRING, 0)

        def CODE_NO_PAIRS(self):
            return self.getToken(PgenParser.CODE_NO_PAIRS, 0)

        def getRuleIndex(self):
            return PgenParser.RULE_code

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode" ):
                listener.enterCode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode" ):
                listener.exitCode(self)




    def code(self):
